overflow issues fixed

--- a/mobile.css
+++ b/mobile.css
@@ -1,8 +1,14 @@
 @media (max-width: 767px){
 
     /* General */
+
+
+    *{
+        
+    }
     body{
-        width: 700px;
+        width: 100%;
+    
     }
     
     h2{
@@ -11,11 +17,12 @@
     }
 
     section{
-        margin-left: 2%;
+        /* margin-left: 2%; */
     }
 
     header{
-        width: 375px;
+        margin: 0;
+        width: 100%;
     }
 
     /* MENU */
@@ -90,12 +97,12 @@
     }
     /* FILTERS */
     #filters{
-        width:380px;
+        width: 100%;
         flex-wrap: wrap;
     }
 
     p#info{
-        padding-top: 70px;
+        margin-top: 150px;
     }
 
     #filter-title{
@@ -109,9 +116,18 @@
     }
     /* MOST POPULAR */
     #most-popular{
-        width: 390px;
+        width: 101%;
         height: 500px;
         border-radius: unset;
+        margin-left: 6.3%;    
+    }
+
+    #most-pop-title-container{
+        width: 370px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-bottom: 20px;
     }
 
     #most-popular-grid-container{
@@ -120,16 +136,16 @@
 
     /* FRIST SHOWCASE */
     .frist-showcase{
-        width: 375px;
+        width: 99%;
         height: 1700px;
         display: flex;
         flex-direction: column-reverse;
-        margin-left: 0;
+        margin-left: -6.3%;
     }
 
     #accommodations{
         margin-top: unset;
-        width: 375px;
+        width: 370px;
         height: 1200px;
         background-color: transparent;
     }
@@ -139,10 +155,11 @@
     }
 
     .flex-grid{
-        width: 375px;
+        width: 370px;
         height: 1215px;
         align-items: center;
         justify-content: space-between;
+        margin-left: 6%;
     }
     .col{
         width: 300px;
@@ -206,16 +223,17 @@
     }
     /* FOOTER */
     footer{
-        width: 390px;
+        width: 100%;
         height: 400px;
+        
     }
     #footer_flex_container{
+        width: 100%;
         flex-direction: column;
-        margin-left:25px;
     }
 
     #footer_flex_container div{
-        width: 375px;
+        width: 100%;
         padding-bottom: 20px;
     }
 
