--- a/mobile_tablet.css
+++ b/mobile_tablet.css
@@ -1,14 +1,37 @@
 @media (max-width: 992px) and (min-width: 768px){
     body{
-        width: auto;
+        width: 100%;
+        height: 100%;
         
     }
 
     header , section  {
-        margin-left: 5%;
+        margin-left: 0;
+    }
+
+    header{
+        width: 100%;
+    }
+
+    #filters{
+        width: 700px;
+        flex-wrap: wrap;
+    }
+
+    #info{
+        margin-top: 60px;
     }
     
+    /* MENU */
 
+    .blue-border{
+        border-top:  3px solid var(--primary-blue);
+    }
+
+    #grey-border{
+        border-top:  3px solid var(--primary-background);
+    }
+   
     .menu{
         width: 750px;
         justify-content: space-between;
@@ -16,16 +39,17 @@
     }
 
     .frist-showcase{
-        width: 800px;
+        width: 750px;
         height: 1300px;
         display: flex;
         flex-direction: column-reverse;
         justify-content: space-between;
+        margin-left: 1.2%;
 
     }
     /* MOST POPULAR */
     #most-popular{
-        width: 750px;
+        width: 100%;
         height: 415px;
     }
 
@@ -88,7 +112,7 @@
         width: 750px;
         height: 3000px;
         margin-top: 60px;
-        margin-left: 35px;
+        margin-left: 4.2%;
     }
 
     #activities h2{
@@ -96,10 +120,12 @@
     }
 
     .activities-flex-grid-container{
+        width: 750px;
         height: 2900px;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
+        margin-left: -3%;
     }
     
     #activity-col-1 #activity-col-3{
@@ -110,7 +136,7 @@
     #activity_frame_1 , #activity_frame_2 , #activity_frame_3 , 
     #activity_frame_4 , #activity_frame_5 , #activity_frame_6
     {
-        width: 700px;
+        width: 750px;
         height: 455px;
         position: unset;
         background-color: unset;
@@ -125,7 +151,7 @@
     #activity-pic-1 , #activity-pic-2 , #activity-pic-3 ,
     #activity-pic-4 , #activity-pic-5 , #activity-pic-6
     {
-        width: 700px;
+        width: 750px;
         height: 400px;
         position: unset;
         border-radius: 20px 20px 0 0;
@@ -134,8 +160,8 @@
     /* FOOTER */
 
     footer{
-        width: 900px;
-        height: 400px;
+        width: 768px;
+        height: 300px;
     }
 
     #footer_flex_container{
